Fixed issue with the last pixel in each row not showing up properly

--- a/styles.css
+++ b/styles.css
@@ -45,22 +45,24 @@ nav > ul > li {
     overflow: auto;
     border: 3em solid red;
     padding: 0;
-    width: 500px;
+    width: 512px;
     border-radius: 1em;
     margin-top: 2em;
+    gap: 0;
 }
+
+/* .sketch-container > :nth-child(16n + 1) {
+    width: 2em;
+    border: .001em solid rgba(0, 0, 0, 0.100);
+    height: 0;
+} */
 
 .pixel {
     background-color: whitesmoke;
     width: 2em;
     height: 2em;
     border: .001em solid rgba(0, 0, 0, 0.100);
-}
-
-.sketch-container > :nth-child(16n + 1) {
-    width: 100%;
-    border: 0;
-    height: 0;
+    box-sizing: border-box;
 }
 
 .button-style {
